# qr_sdl_gpu_glsl

./: .gitignore  CMakeLists.txt  README.md  divina_commedia_it.txt
.virgil/: brain.md
aizawa/: aizawa.comp  aizawa.gdshader  aizawa_particle_disc_2d.gdshader  aizawa_particle_glow_2d.gdshader  out.txt  render.frag  render.vert  supernova_gl  supernova_gl.cpp
shaders/: gravitational_waves_kerr.frag  scarf.frag  triangle.frag  triangle.vert  wolframs.frag
src/: main.c
